# hello-world-rust-wasm-component-lib

./: .gitignore  Cargo.toml  Makefile  README.md  bindings-js.patch  build.sh  exports.wai  fib.wai  hello-world-wasm-lib.wai  io.wai  just  test.sh  wasi_snapshot_preview1.reactor.wasm  z.rs
.github/workflows/: build.yml  cargo-wasmer-dry-run.yml  cargo-wasmer.yml  draft-release.yml  js-npm-publish.yml  js-npm-test.yml  just-build.yml  make-build.yml  test-build.yml  test.yml
hello-world-rust-wasm-component.js/: README.md  index.test.js  package-lock.json  package.json
hello-world-rust-wasm-component.py/: pyproject.toml
hello-world-rust-wasm-component.rs/: Cargo.toml
hello-world-rust-wasm-lib-component.js/: README.md  index.test.js  package-lock.json  package.json
src/: lib.rs
tests/: cbh.js  for-each-cb-host.js  for-each.test.js  hello-world.test.js  hello_world_test.rs  io.js
tests/js/: .gitignore  index.test.js  package-lock.json  package.json
wit/: world.wit
