[package]
name = "hello-world-rust-wasm-component-lib"
version = "1.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.16.0" }

[lib]
crate-type = ["cdylib"]
