[package]
name = "hello-world-rust-wasm-component-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.6.0"
derive_more = "0.99.17"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasmtime = { version = "16.0.0", features = ["component-model"] }
weak-table = "0.3.2"

[package.metadata.component]
package = "component:hello-world-rust-wasm-component-lib"

[package.metadata.component.dependencies]
