[tool.poetry]
name = "hello-world-rust-wasm-component"
version = "0.1.0"
description = ""
authors = ["Jacob Hummer <jcbhmr@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
wasmtime = "^15.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
